# comic_reading_order

./: .gitignore  README.md  config.py  pyproject.toml
backend/database/: models.py
